main.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');

body a,p,ul,li,sub,sup,h1, pre{
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 1em;
    text-decoration: none;
    user-select: none;
    cursor: default;
}

section,
div{
    margin-left: 0;
    margin-top: 0;
}

body, html {
    height: 100%;
    padding: 0;
    margin: 0;
}

/* Home Section */

#home-button {
    background-color: #FFC80A;
    border-radius: 20px;
    padding: 20px 70px;
    border: 5px solid #FFC80A;
    letter-spacing: 3px;
    transition-duration: 0.35s;
    outline: none;
}

#home-button:hover {
    background-color: transparent;
    color: black;
    transition-duration: 0.35s;
    border: 5px solid #FFC80A;
}

#home-title {
    font-size: 15vw;
}

.button {
    font-family: 'Montserrat', sans-serif;
    color: #222222;
    margin-top: 25px;
    font-size: 24px;
    font-weight: 600;
    cursor: pointer;
}

.subtext {
    color: #eeeeee;
    font-size: 24px;
    text-align: center;
}

.info {
    margin: auto auto;
    vertical-align: middle;
    text-align: center;
    position: relative;
}

span.logo-first {
    color: #eeeeee;
    font-weight: 700;
}

span.logo-second {
    color: #222222;
    font-weight: 700;
}

.photo {
    z-index: 1;
    height: 100%;
    width: 100%;
    position: relative;
}

.color {
    z-index: 1;
    height: 100%;
    width: 100%;
    position: relative;
}

#home {
    background:
            linear-gradient(
                    rgba(22,22,22, 0.35),
                    rgba(22,22,22,0.35)
            ),
            url("Images/home.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 100%;
    background-attachment: fixed;

    display: flex;
    align-items: center;
}

/* Navigation Bar Menu Button */

.topnav .menu-btn {
    display: none;
}

.topnav .menu-btn:checked ~ nav .menu,
.topnav .menu-btn:checked ~ nav .menudown{
    max-height: 400px;
}

.topnav .menu-btn:checked ~ nav .menu1,
.topnav .menu-btn:checked ~ nav .menudown1{
    max-height: 0px;
}

.topnav .menu-btn:checked ~ .menu-icon .navicon {
    background: transparent;
}

.topnav .menu-btn:checked ~ .menu-icon .navicon:before {
    transform: rotate(-45deg);
}

.topnav .menu-btn:checked ~ .menu-icon .navicon:after {
    transform: rotate(45deg);
}

.topnav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
.topnav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
    top: 0;
}

/* Navigation Bar */

.topnav {
    background-color: transparent;
    position: fixed;
    width: 100%;
    z-index: 3;
    transition-duration: 2s;
}

.topnav ul {
    margin: 0;
    padding: 0;
    list-style: none;
    overflow: hidden;
}

.topnav li {
    float: left;
}

.topnav li a {
    display: block;
    font-weight: 900;
    letter-spacing: 2px;
    padding: 1.25em 0.7em;
    text-decoration: none;
    transition-duration: 0.25s;
}

.topnav li a:hover {
    position: relative;
    color: #FFC80A;
    cursor: pointer;
    font-weight: 900;
    transform: scale(1.2, 1.2);
    background-color: inherit;
}

.topnav .logo {
    display: block;
    float: left;
    font-size: 2em;
    padding: 10px 20px;
    text-decoration: none;
}

.active {
    color: #FFC80A !important;
    cursor: pointer;
    transition-duration: 0.25s;
    background-color: inherit;
    transform: scale(1.2, 1.2);
    transition-timing-function: ease;
}

/* Navigation Bar Menu */

.topnav nav .menu,
.topnav nav .menudown{
    clear: none;
    float: right;
    max-height: none;
    padding-right: 1.25em;
    transition-duration: 0.2s;
    transition-timing-function: ease-out;
}

.menu li a {
    color: #eeeeee;
    transition-duration: 0.25s;
}

.menu li a:hover {
    color: #FFC80A !important;
    cursor: pointer;
    font-weight: 900;
    transform: scale(1.2, 1.2);
    transition-duration: 0.25s;
    transition-timing-function: ease;
}

/* Navigation Bar Menu Icon */

.topnav .menu-icon {
    cursor: pointer;
    display: none;
    float: right;
    padding: 28px 20px;
    position: relative;
    user-select: none;
}

.topnav .menu-icon .navicon {
    background: #333;
    display: block;
    height: 2px;
    position: relative;
    transition: background .2s ease-out;
    width: 18px;
}

.topnav .menu-icon .navicon:before,
.topnav .menu-icon .navicon:after {
    background: #333;
    content: '';
    display: block;
    height: 100%;
    position: absolute;
    transition: all .2s ease-out;
    width: 100%;
}

.topnav .menu-icon .navicon:before {
    top: 5px;
}

.topnav .menu-icon .navicon:after {
    top: -5px;
}

/* Navigation Bar */

a {
    color: #222222;
}

#logo {
    padding: 0.55em 1.25em;
    float: left;
    transition-duration: 0.3s;
}

#logo-link {
    float:left;
    color: transparent;
    font-size: 2em;
    cursor: default;
    transition-duration: 0.3s;
}

#logo-link-down {
    float:left;
    letter-spacing: 1.05px;
    transition-duration: 0.3s;
    font-weight: 700;
    font-size: 2em;
    color: rgb(34, 34, 34);
    cursor: pointer;
}

#logo-link-down:hover {
    float:left;
    color: #FFC80A;
    font-weight: 700;
    transition-duration: 0.3s;
    transform: scale(1.07, 1.07);
    transition-timing-function: ease;
}

/* Navigation Bar Transition (60em = 960px) */

.topnav-mobile li {
    float: none;
}
.topnav-mobile li a {
    color: #222222;
    letter-spacing: normal;
}

.topnav-mobile nav .menu,
.topnav-mobile nav .menudown{
    clear: both;
    float: none;
    max-height: 0;
    padding-right: 0;
}

.topnav-mobile .menu-icon {
    display: inline-block;
}

.topnav-mobile li a:hover {
    transform: none;
    background-color: #222;
}

.topnav-mobile {
    background-color: rgba(238, 238, 238, 0.9);
}

.topnav-mobile .active {
    transform: none;
    color: #eeeeee !important;;
    background-color: #333;
    font-weight: 600;
}
/* ... */

